improved colors on text and layout issues

--- a/src/Answer.css
+++ b/src/Answer.css
@@ -13,7 +13,7 @@
   background-color: white;
   border: none;
   border-radius: 5px;
-  color: black;
+  color: #03273f;
   padding: 5px 20px;
   font-family: 'Raleway', sans-serif;
   font-weight: 600;
