--- a/src/Question.css
+++ b/src/Question.css
@@ -17,7 +17,7 @@
   background-color: white;
   border: none;
   border-radius: 5px;
-  color: black;
+  color: #03273f;
   padding: 5px 20px;
   font-family: 'Raleway', sans-serif;
   font-weight: 600;
@@ -45,7 +45,7 @@
   border: none;
   border-radius: 4px;
   background-color: white;
-  color: rgb(17, 16, 16);
+  color: #03273f;
   padding: 5px 12px;
   transition: background-color 0.2s, color 0.2s;
   font-weight: 700;
@@ -54,7 +54,7 @@
 
 .speak-question:hover {
   color: white;
-  background-color: black;
+  background-color: rgb(85, 85, 72);
 }
 
 
@@ -68,7 +68,7 @@
   }
 
   button.answer-button {
-    color: black;
+    color: #03273f;
     padding: 3px 10px;
     margin: 1%;
     margin-top: 10px;
