--- a/src/Results.css
+++ b/src/Results.css
@@ -28,7 +28,7 @@
   background-color: white;
   border: none;
   border-radius: 5px;
-  color: black;
+  color: #03273f;
   padding: 5px 20px;
   font-family: 'Raleway', sans-serif;
   font-weight: 600;
@@ -58,7 +58,7 @@
   .results-image{
     height: 160px;
     padding: 0px;
-    margin: 0 auto;
+    margin: 10px auto;
   }
 
   .results-message {
